Remove unneeded dependencies on Java 1.4.
git-svn-id: https://svn.apache.org/repos/asf/cocoon/trunk@37392 13f79535-47bb-0310-9956-ffa450edef68